--- a/package.json
+++ b/package.json
@@ -1,34 +1,37 @@
 {
-  "name": "burger",
-  "version": "1.0.0",
-  "description": "This app is a burger logger with MySQL, Node, Express, and Handlebars. It follows the MVC design pattern.",
-  "main": "server.js",
-  "dependencies": {
-    "body-parser": "^1.16.0",
-    "express": "^4.14.0",
-    "express-handlebars": "^3.0.0",
-    "method-override": "^2.3.7",
-    "mysql": "^2.13.0"
-  },
-  "devDependencies": {},
-  "scripts": {
-    "test": "node server.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/aishaprograms/burger.git"
-  },
-  "keywords": [
-    "express",
-    "mysql",
-    "handlebars",
-    "body-parser",
-    "method-override"
-  ],
-  "author": "Aisha Ahmad",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/aishaprograms/burger/issues"
-  },
-  "homepage": "https://github.com/aishaprograms/burger#readme"
+    "name": "burger",
+    "version": "1.0.0",
+    "description": "This app is a burger logger with MySQL, Node, Express, and Handlebars. It follows the MVC design pattern.",
+    "main": "server.js",
+    "dependencies": {
+        "body-parser": "^1.16.0",
+        "express": "^4.14.0",
+        "express-handlebars": "^3.0.0",
+        "method-override": "^2.3.7",
+        "mysql": "^2.13.0"
+    },
+    "engines": {
+        "node": "6.2.1"
+    },
+    "devDependencies": {},
+    "scripts": {
+        "test": "node server.js"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/aishaprograms/burger.git"
+    },
+    "keywords": [
+        "express",
+        "mysql",
+        "handlebars",
+        "body-parser",
+        "method-override"
+    ],
+    "author": "Aisha Ahmad",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/aishaprograms/burger/issues"
+    },
+    "homepage": "https://github.com/aishaprograms/burger#readme"
 }
