--- a/package.json
+++ b/package.json
@@ -10,12 +10,9 @@
         "method-override": "^2.3.7",
         "mysql": "^2.13.0"
     },
-    "engines": {
-        "node": "6.2.1"
-    },
     "devDependencies": {},
     "scripts": {
-        "test": "node server.js"
+        "start": "node server.js"
     },
     "repository": {
         "type": "git",
